Incorrect Material viewport shading of Cycles Normal Map node in Edit mode for an object with Array modifier. #49226

Closed
opened 2016-09-02 11:51:13 +02:00 by Alexander Gavrilov · 7 comments

System Information

Fedora 23, GeForce GT 640

Blender Version

Broken: Sep 2 f0159d1 nightly

Short description of error

When entering edit mode on a mesh with Array modifier on the top of the stack, Material viewport shading of the Normal Map node is only correct for half of the faces.

Exact steps for others to reproduce the error

Open this file: test-array-edit-mode.blend

Adding subsurf below Array fixes this, but if it's above, the bug still exists.

**System Information** Fedora 23, GeForce GT 640 **Blender Version** Broken: Sep 2 f0159d1 nightly **Short description of error** When entering edit mode on a mesh with Array modifier on the top of the stack, Material viewport shading of the Normal Map node is only correct for half of the faces. **Exact steps for others to reproduce the error** Open this file: [test-array-edit-mode.blend](https://archive.blender.org/developer/F350412/test-array-edit-mode.blend) Adding subsurf below Array fixes this, but if it's above, the bug still exists.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @angavrilov

Added subscriber: @angavrilov

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2016-09-02 16:32:18 +02:00

Noticed some invalid operations happening in OpenGL (related on updating uniforms from within glBegin/glEnd block). Have a patch for those and will commit it after Git is open again.

Unfortunately, this doesn't fix the reported issue, so closer look is needed.

Noticed some invalid operations happening in OpenGL (related on updating uniforms from within glBegin/glEnd block). Have a patch for those and will commit it after Git is open again. Unfortunately, this doesn't fix the reported issue, so closer look is needed.

This issue was referenced by 7f682dd704

This issue was referenced by 7f682dd7040e1abacf591b00bfb03fc590493e54

Ok, have the fix for the issue. Will be committed later.

Ok, have the fix for the issue. Will be committed later.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49226
No description provided.